--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     <title>Добавление метки с собственным изображением</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="test1.js" type="text/javascript"></script>
 
 
