--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
     <title>Добавление метки с собственным изображением</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <script src="https://code.jquery.com/jquery-1.8.3.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=115a3177-7f09-478b-87bb-f3f75e76869a" type="text/javascript"></script>
     <script src="icon_customImage.js" type="text/javascript"></script>
-	<style>
-        html, body, #map {
-            width: 100%; height: 100%; padding: 0; margin: 0;
-        }
+
+    <style>
+      html, body { margin: 0; padding: 0; }
+      html, body, #map { width: 100%; height: 100%; }
+
+      .list { list-style: none outside; margin: 0; padding: 0;}
+      .list li { padding-bottom: 10px; }
+      .list a { color: #207697; }
+      .list a:hover { color: #28B8F0; text-decoration: none; }
     </style>
 </head>
 <body>
