--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Добавление метки с собственным изображением</title>
+    <title>Карта сотрудников Райтек</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="https://code.jquery.com/jquery-1.8.3.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=115a3177-7f09-478b-87bb-f3f75e76869a" type="text/javascript"></script>
